# rust_m_queue

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  lib.rs  receiver.rs  sender.rs
