[package]
name = "rust_m_queue"
version = "1.0.5-alpha"
edition = "2021"
description = "OOP-like wrapper around nix's posix m_queue"
license = "MIT"
repository = "https://github.com/inclus16/rust_m_queue"
categories = ["os::unix-apis"]
keywords = ["ips", "m_queue"]

[dependencies]
bincode = { version = "1.3.3" }
serde = { version = "1.0.216", features = ["derive"] }
nix = { version = "0.29.0", features = ["mqueue"] }
anyhow = "1.0.94"